<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowProfileActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline" />


    <ImageView
        android:id="@+id/photoImage"
        android:background="#DCDCDC"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/photo"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo_default"
        tools:srcCompat="@drawable/photo_default" />

    <EditText
        android:id="@+id/fullNameET"
        android:textSize="24sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints=""
        android:background="@drawable/lost_focus_style"
        android:ems="10"
        android:hint="@string/fullName"
        android:inputType="textAutoCorrect|textPersonName|textCapWords"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/nicknameET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/nicknameET"
        android:textSize="24sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/lost_focus_style"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="text"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/emailET"
        app:layout_constraintEnd_toEndOf="@+id/fullNameET"
        app:layout_constraintStart_toStartOf="@+id/fullNameET"
        app:layout_constraintTop_toBottomOf="@+id/fullNameET" />

    <EditText
        android:id="@+id/emailET"
        android:textSize="24sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/lost_focus_style"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/locationET"
        app:layout_constraintEnd_toEndOf="@+id/nicknameET"
        app:layout_constraintStart_toStartOf="@+id/nicknameET"
        app:layout_constraintTop_toBottomOf="@+id/nicknameET" />

    <EditText
        android:id="@+id/locationET"
        android:textSize="24sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/lost_focus_style"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="text|textPostalAddress"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="@+id/emailET"
        app:layout_constraintStart_toStartOf="@+id/emailET"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />

    <ImageButton
        android:id="@+id/changeImageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/change_photo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/photoImage"
        app:layout_constraintEnd_toEndOf="@+id/photoImage"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="@+id/photoImage"
        app:layout_constraintTop_toTopOf="@+id/photoImage"
        app:layout_constraintWidth_percent="0.4"
        app:srcCompat="@android:drawable/ic_menu_camera" />

</androidx.constraintlayout.widget.ConstraintLayout>